--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-@import url(http://fonts.googleapis.com/css?family=Julius+Sans+One|Libre+Baskerville:400,400italic);
 
 * {
   box-sizing: border-box; 
@@ -275,7 +274,7 @@ li.viewall a {
   display: block;
   margin-bottom: 0.25em;
   font-family: "Julius Sans One", sans-serif;
-  font-size: 1.2em;
+  font-size: medium;
   font-style: normal;
   text-transform: uppercase;
 }
@@ -285,7 +284,7 @@ li.viewall a {
 }
 .design-selection .designer-name {
   color: #616857;
-  font-size: 0.9em;
+  font-size: medium;
   font-style: normal;
 }
 
@@ -388,11 +387,11 @@ li.viewall a {
   background-color: rgba(138, 188, 159, 0.5);
   background-image: url(bamboo.png);
 }
-.zen-resources li {
+.zenRecs li {
   border-top: solid 1px #a0b9ad;
   font-style: normal;
 }
-.zen-resources li:last-child {
+.zenRecs li:last-child {
   float: none;
   width: auto;
   border-bottom: solid 1px #a0b9ad;
@@ -578,7 +577,6 @@ footer a.zen-github:focus::before {
 }
 
 @media only screen and (max-width: 320px) {
-  /* adjusting the site header type size */
   h1 {
     font-size: large;
   }
@@ -749,7 +747,6 @@ footer a.zen-github:focus::before {
     padding-right: 38%;
     margin: 0;
   }
-  /* extra padding at the cutoffs */
   div.participation,
   div.requirements {
     padding-top: 4em;
@@ -793,7 +790,7 @@ footer a.zen-github:focus::before {
     width: auto;
     padding-left: 0;
     padding-right: 0;
-    margin: 0 29.4% 0 14.7%; /* 0 10% 0 5% of total width */
+    margin: 0 29.4% 0 14.7%; 
   }
 
   .design-selection li:first-child {
@@ -812,50 +809,13 @@ footer a.zen-github:focus::before {
     width: 100%;
     height: 310px;
 
-    background: -moz-linear-gradient(
+    background: linear-gradient(
       left,
       rgba(255, 255, 255, 0) 0%,
       rgba(255, 255, 255, 0) 66%,
       rgba(0, 0, 0, 0.2) 66%,
       rgba(33, 84, 95, 0.3) 100%
-    ); /* FF3.6+ */
-    background: -webkit-gradient(
-      linear,
-      left top,
-      right top,
-      color-stop(0%, rgba(255, 255, 255, 0)),
-      color-stop(66%, rgba(255, 255, 255, 0)),
-      color-stop(66%, rgba(33, 84, 95, 0.3)),
-      color-stop(100%, rgba(33, 84, 95, 0))
-    ); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(
-      left,
-      rgba(255, 255, 255, 0) 0%,
-      rgba(255, 255, 255, 0) 66%,
-      rgba(33, 84, 95, 0.3) 66%,
-      rgba(33, 84, 95, 0) 100%
-    ); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(
-      left,
-      rgba(255, 255, 255, 0) 0%,
-      rgba(255, 255, 255, 0) 66%,
-      rgba(33, 84, 95, 0.3) 66%,
-      rgba(33, 84, 95, 0) 100%
-    ); /* Opera 11.10+ */
-    background: -ms-linear-gradient(
-      left,
-      rgba(255, 255, 255, 0) 0%,
-      rgba(255, 255, 255, 0) 66%,
-      rgba(33, 84, 95, 0.3) 66%,
-      rgba(33, 84, 95, 0) 100%
-    ); /* IE10+ */
-    background: linear-gradient(
-      to right,
-      rgba(255, 255, 255, 0) 0%,
-      rgba(255, 255, 255, 0) 66%,
-      rgba(33, 84, 95, 0.3) 66%,
-      rgba(33, 84, 95, 0) 100%
-    ); /* W3C */
+    ); 
   }
   .design-archives nav {
     display: block;
