--- a/style.css
+++ b/style.css
@@ -94,7 +94,6 @@ body {
 body {
   color: #325050;
   background: #fff;
-  font-family: "Libre Baskerville", sans-serif;
   font-size: 70%;
 }
 
@@ -144,8 +143,7 @@ h1 {
   padding-top: 0;
   padding-bottom: 5px;
   border-bottom: none;
-  font-family: "Julius Sans One", sans-serif;
-  font-size: 3.2em;
+  font-size: xx-large;
   text-transform: uppercase;
 }
 h1::before {
@@ -167,7 +165,7 @@ h2 {
   padding-bottom: 30px;
   border-top: none;
   color: rgba(255, 255, 255, 0.6);
-  font-size: 1.6em;
+  font-size: large;
   font-style: italic;
 }
 h2::before {
@@ -177,8 +175,7 @@ h2::before {
 h3 {
   margin: 2em 0 0 0;
   color: #2e484c;
-  font-family: "Julius Sans One", sans-serif;
-  font-size: 1.8em;
+  font-size: medium;
   font-weight: normal;
   text-transform: uppercase;
 }
@@ -187,7 +184,7 @@ p {
   line-height: 2;
 }
 
-.page-wrapper {
+.theGarden {
   position: relative;
 }
 .summary,
@@ -217,7 +214,6 @@ p {
   border-radius: 1px;
 
   color: #809b7e;
-  font-family: "Julius Sans One", sans-serif;
   text-transform: uppercase;
 }
 .intro a:hover,
@@ -334,8 +330,6 @@ div.benefits p {
     left top,
     right top,
     color-stop(0%, rgba(255, 255, 255, 0)),
-    color-stop(50%, rgba(255, 255, 255, 0.5)),
-    color-stop(100%, rgba(255, 255, 255, 0))
   ); 
   background: linear-gradient(
     left,
@@ -467,11 +461,11 @@ li.viewall a {
   background-color: rgba(138, 188, 159, 0.5);
   background-image: url(bamboo.png);
 }
-.zenRecs li {
+.zen-resources li {
   border-top: solid 1px #a0b9ad;
   font-style: normal;
 }
-.zenRecs li:last-child {
+.zen-resources li:last-child {
   float: none;
   width: auto;
   border-bottom: solid 1px #a0b9ad;
@@ -662,7 +656,7 @@ footer a.zen-github:focus::before {
       #e5ede8 66%,
       #e5ede8 100%
     );
-    background: gradient(
+    background: linear-gradient(
       linear,
       left top,
       right top,
